eks-v1-23/deploy-nginx/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nginx
  labels:
    run: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
